--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -66,7 +66,9 @@ tableofcontents}
 Lecture notes for the MSc course "Research Skills". Work in progress. Please send comments and suggestions to \href{http://florianhartig.wordpress.com/}{http://florianhartig.wordpress.com/}
 
 
-Acknowledgments: Severin Hauenstein for contributions to the chapter on scientific writing
+\section*{Acknowledgments}
+
+Severin Hauenstein for contributions to the chapter on scientific writing.
 
 \chapter{Logic and philosophy of science}
 
@@ -78,9 +80,11 @@ The Oxford dictionary defines science as
 Science [mass noun] - the intellectual and practical activity encompassing the systematic study of the structure and behaviour of the physical and natural world through observation and experiment
 \end{quote}
 
-Hence, science is a method to find out how to world works.\footnote{Epistemology, from Greek episteme = knowledge and logos = word is the branch of philosophy concerned with what knowledge is, how it can be acquired, and what can be known} In fact, "a method" is an understatement. In the last centuries, the scientific method has been the reason for an unprecedented increase in knowledge, opportunity and well-being. In the western world at least, science is the current dominant answer to what one can know and how to find it out (epistemology). 
+Hence, science is a method to find out how to world works.\footnote{Epistemology, from Greek episteme = knowledge and logos = word is the branch of philosophy concerned with what knowledge is, how it can be acquired, and what can be known} In fact, "method" is an understatement. In the last centuries, the scientific method has been the reason for an unprecedented increase in knowledge, opportunity and well-being. In the western world at least, science is the current dominant answer to what one can know and how to find it out (epistemology). 
 
-But science is also a human endeavor.\footnote{Many famous scientists engaged in personal feuds that, looking back, seem to be fueled by irrationality and personal pride. The doubtlessly ingenious Isaac Newton engaged in various spiteful and bitter feuds, including his most famous battle with German mathematician Gottfried Leibniz over the invention of infintesmial calculus.} If one says "science", it may be that the reference relates to the history of science, the state of scientific knowledge, or the science as a social institution. Regarding those latter aspects of science, things become less formally defined - if we look at the history of science, we see a complex of individuals that are somewhat unified by a common cause, but at the same time subject to their national and cultural influences as well as by personal vanity, pride or madness. As a result, the history of science, as well as its present state, is complicated by personal preferences, power games and random events, in the same way as political and economic history is.
+\marginnote{Many famous scientists engaged in personal feuds that, looking back, seem to be fueled by irrationality and personal pride. The doubtlessly ingenious Isaac Newton engaged in various spiteful and bitter feuds, including his most famous battle with German mathematician Gottfried Leibniz over the invention of infintesmial calculus.}
+
+But science is also a human endeavor. If one says "science", it may be that the reference relates to the history of science, the state of scientific knowledge, or the science as a social institution. Regarding those latter aspects of science, things become less formally defined - if we look at the history of science, we see a complex of individuals that are somewhat unified by a common cause, but at the same time subject to their national and cultural influences as well as by personal vanity, pride or madness. As a result, the history of science, as well as its present state, is complicated by personal preferences, power games and random events, in the same way as political and economic history is.
 
 In the center of science, however, is a set of simple assumptions and ideals, often referred to as the "scientific method". Understanding how this method works will be the focus of the remaining part of this chapter.
 
@@ -110,13 +114,16 @@ And in this it is not likely that all are mistaken the conviction is rather to b
 \subsection{Empiricism}
 
 
-
-\section{Popper and the scientific method}
-
+\section{Important philosophical views on science}
 
 
-\section{Kuhn and variations of the scientific method}
+\subsection{Popper and the scientific method}
 
+
+\subsection{Kuhn and variations of the scientific method}
+
+
+\subsection{}
 
 
 \section{Summary: the principles of science}
@@ -127,19 +134,43 @@ And in this it is not likely that all are mistaken the conviction is rather to b
 
 \chapter{The scientific literature}
 
+Science today is highly specialized. Most basic questions have long been solved. The idea that the scientific community is building a "house of knowledge", where one story is built on the next, is often expressed by a famous quote by Isaac Newton 
 
 \begin{quote}
 If I have seen further it is by standing on the shoulders of Giants.
 \end{quote}
-\footnote{Sounds very deep - but Brian Gottesman notes about this quote \href{http://mentalfloss.com/article/24520/6-things-you-should-know-about-isaac-newton}{here}:"Newton was a man of great ego and great temper, and had few close friends. [...] Sir Isaac's most famous quotation may well have been an exercise in sarcastic, spiteful anger. In February 1676 Newton wrote to Hooke "if I have seen further it is by standing on the shoulders of Giants." Often taken as a sign of Newton's great humility, this famed quote was almost certainly intended as an insult to Hooke, who was hunchbacked and may have suffered from a form of dwarfism."}
+
+Regardless of whether the quote was meant as it is interpreted today \footnote{Brian Gottesman notes \href{http://mentalfloss.com/article/24520/6-things-you-should-know-about-isaac-newton}{here}: "Sir Isaac's most famous quotation may well have been an exercise in sarcastic, spiteful anger. In February 1676 Newton wrote to Hooke "if I have seen further it is by standing on the shoulders of Giants." Often taken as a sign of Newton's great humility, this famed quote was almost certainly intended as an insult to Hooke, who was hunchbacked and may have suffered from a form of dwarfism."
+}, the fact remains that scientists today are hardly explorers that go far on unmarked territory. 
+
+
+ 
 
 
 
 
-\section{The scientific literature - standing on the shoulders of giants}
+
+Before you start a new research project on a particular topic, you should find out what has already been done to a) understand better what you are doing b) avoid doing something that has already been done. 
 
 
-\subsection{Citation rules}
+\section{Finding relevant literature}
+
+How to search for relevant literature depends on the
+
+
+\section{Organizing your literature}
+
+The basic answer to how to organize your literature is pleasingly short - people have created specialized software for this purpose. These reference managers work great, so use them! They will allow you to search in your papers for keywords, names, or anything else, link your pdfs, and they will also couple with your word processing software (MS Word, Open Office, LaTeX). 
+
+\marginnote{See our lab on working with a reference manager \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch}{here}}
+
+The only question is which of the available programs work best for you. A general recommendation is difficult, as the choice depends next to your personal preferences also on you operating system and your word processing software. You'll find a lot of hints on the internet though, and I also give some short hints on the linked page to the right. 
+
+\section{Citation rules}
+
+\marginnote{High-profile cases of "faulty" citations include the former German Minister of Defense Karl-Theodor zu Guttenberg as well as the the former German Federal Minister of Education and Research, Annette Schavan}
+
+Given the amount of PhD titles that have recently been revoked from prominent public figures for not correctly citing the literature in the PhD theses (a charitable expression for outright plagiarism in some cases)
 
 http://www.nature.com/ng/journal/v47/n4/full/ng.3271.html
 
@@ -150,7 +181,7 @@ Greenberg-Howcitationdistortions-2009
 
 
 
-\chapter{From a good questions, to data and valid conclusions}
+\chapter{Questions, data and valid conclusions}
 
 \begin{quote}
 For to be possessed of a vigorous mind is not enough; the prime requisite is rightly to apply it. The greatest minds, as they are capable of the highest excellences, are open likewise to the greatest aberrations; and those who travel very slowly may yet make far greater progress, provided they keep always to the straight road, than those who, while they run, forsake it. (Descartes, Le Discours de la Méthode, 1637) 
@@ -161,7 +192,9 @@ For to be possessed of a vigorous mind is not enough; the prime requisite is rig
 
 Assuming you have your question, how can we find an answer to this.
 
-\section{Validity}
+
+
+\section{Experimental design and validity}
 
 \subsection{Constrcuct validity}
 
@@ -178,10 +211,11 @@ Are the things
 \subsection{Statistical validity}
 
 
+\paragraph{Statistical Power} Statististical power
+
+
 \subsection{External validity}
 
-
-\section{Experimental design}
 
 
 
@@ -190,14 +224,31 @@ Are the things
 
 \section{Principles of communication}
 
-\section{Oral presentation}
+
+
+\section{Arguments and logical fallacies}
+
 
 \section{Scientific visualisation}
 
 
+\section{Communication channels}
+
+\paragraph{Oral presentations}
+
+\paragraph{Poster presentation}
+
+\paragraph{Written texts}
+
+\paragraph{Blogs, social media, and such}
+
+
+\section{Hints on oral delivery}
+
+
+
 Kelleher-Tenguidelineseffective-2011
 
-\section{Logical fallacies}
 
 
 
@@ -210,14 +261,14 @@ Writing is an essential skill for an academic, as for many other professions. \m
 
 \paragraph{Start writing early}\marginnote{Please, follow this point in your thesis - if you don't it leads foreseeable into disaster!} Writing structures your thinking, and you will find flaws in your logic that you didn't see before. "The time to begin writing an article is when you have finished it to your satisfaction. By that time you begin to clearly and logically perceive what it is that you really want to say." (Mark Twain)
 
-\paragraph{Know your audience}\marginnote{\citet{Gopen1990} state "it matters only whether a large majority of the reading audience accurately perceives what the author had in mind".} Who is going to read what you write?  You need to adjust your text to the knowledge and background of your audience. 
+\paragraph{Know your audience}\marginnote{\citet{Gopen-ScienceOfScientific-1990} state "it matters only whether a large majority of the reading audience accurately perceives what the author had in mind".} Who is going to read what you write?  You need to adjust your text to the knowledge and background of your audience. 
 
 
 \paragraph{Know what you want to say, and make a selection}\marginnote{"If you don't know where you are going,you'll end up someplace else" (Yogi Berra). } Sounds trivial, but in my experience it isn't. Before spending hours on writing the wrong text, try to explain a friend in 5-10 min the essential points of piece, and note the structure. If you fail with this, think again about your story. Also remember: Writing a good paper is not about telling everything you know or have done about a topic -- it is about telling a story and selecting the relevant details. 
 
-\paragraph{Mindset} Make your goal, above all, clarity of thought and expression, and impervious logic of your argument. Read \citet{Woodford1967}.
+\paragraph{Mindset} Make your goal, above all, clarity of thought and expression, and impervious logic of your argument. Read \citet{Woodford-Sounderthinkingthrough-1967}.
 
-\paragraph{Respect conventions}\marginnote{For example, the default scientific article is divided into a title, abstract, introduction, materials and methods, results and discussion. Within these structural elements there are further recognizable patterns. Maintaining this structure makes it easier to understanding of the article's messages \citep{Gopen1990,Tischler1978}} Readers, particularly experienced readers, are familiar with writing conventions expect to find arguments, sections and statements in particular positions and structures. If the writer respects these structural standards the readability is greatly improved. 
+\paragraph{Respect conventions}\marginnote{For example, the default scientific article is divided into a title, abstract, introduction, materials and methods, results and discussion. Within these structural elements there are further recognizable patterns. Maintaining this structure makes it easier to understanding of the article's messages \citep{Gopen-ScienceOfScientific-1990,Tischler-Scientificwritingbooklet-1978}} Readers, particularly experienced readers, are familiar with writing conventions expect to find arguments, sections and statements in particular positions and structures. If the writer respects these structural standards the readability is greatly improved. 
 
 
 \paragraph{Modesty} Think of a scientific text as a piece of craftsmanship, like a chair. What is expected of you is to produce a simple chair that respects the usual standards (e.g. four legs), and that is, above all, solid. You are not expected to add fancy ornamentation that might be used by an ingenious master craftsmen, and produce a entire set of furniture that would suffice to fit out a house. If you could do the later, you would gain admiration and praise, but when trying, you will nearly certainly fail to even produce the very thing you were asked for - a simple, solid chair. Bottomline: stay modest in what you want to achieve, but stay ambitions in how you achieve it!
@@ -408,8 +459,8 @@ this Correlation, as R is dependent on C (XAY, 1968).
 \item Style
 \begin{enumerate}
 	\item Drop redundant words: Any of the following \textbf{words} can be erased: "\textbf{a total of} n subjects", "the simulations were run with the \textbf{exact} same parameter set as before"
-	\item Pompous/ pontificating style: If something can be said in simple words, it should be said in simple words, i.e. if the only purpose of a sentence is to "sound scientific", it should not be said at all. Examples: The data \textbf{featured/comprised} a pixel size of 10 (had). We utilized (use).\footnote{Styleguides advice against complicated words such as utilize if there are simpler equivalent alternatives, although others have argued that there is a different between use and utilize - but could you name it? See discussion here \href{http://en.wiktionary.org/wiki/utilise}{here}.} We used the model in an integrated framework to facilitate a holistic forecast" (predicting from the model). Tip: Read \citet{Woodford1967}.
-	\item Topic position/ Stress position not properly occupied: The first part of a sentence should give the context. The last part of the sentence should provide the crucial new information, and should relate to what is further discussed. Tip: Read \citet{Gopen1990}.
+	\item Pompous/ pontificating style: If something can be said in simple words, it should be said in simple words, i.e. if the only purpose of a sentence is to "sound scientific", it should not be said at all. Examples: The data \textbf{featured/comprised} a pixel size of 10 (had). We utilized (use).\footnote{Styleguides advice against complicated words such as utilize if there are simpler equivalent alternatives, although others have argued that there is a different between use and utilize - but could you name it? See discussion here \href{http://en.wiktionary.org/wiki/utilise}{here}.} We used the model in an integrated framework to facilitate a holistic forecast" (predicting from the model). Tip: Read \citet{Woodford-Sounderthinkingthrough-1967}.
+	\item Topic position/ Stress position not properly occupied: The first part of a sentence should give the context. The last part of the sentence should provide the crucial new information, and should relate to what is further discussed. Tip: Read \citet{Gopen-ScienceOfScientific-1990}.
 	\item A paragraph structures the text into topical units. Use them! Each paragraph should introduce its topic in the beginning, and ideally lead to some conclusion or summary at the end. 
 	\item Unnecessary adjectives. Mark Twain: "As to the adjective: when in doubt, strike it out." Especially adjectives such as "very", "particularly" are often not necessary. Applies also to larger constructs such as "Evolutionary Game Theory \uline{is an important tool to} investigate(s) ..." -- if you erase the underlined text, the sentence remains fine.
 	\item Unclear/ ambiguous expressions: Write as clear and as informative as possible. Avoid ambiguous words like "tends to", "mostly" etc. if you can make a definite statement. Example: "the frequency of cooperators always tends to be zero"  $\rightarrow$ What does that mean? 1) It was always zero or 2) It was zero in 95 \% of the cases or 3) something else.
@@ -448,18 +499,47 @@ Up to now, we have covered the primary scientific process from deciding on a sci
 
 \section{Professional ethics and good scientific practice}
 
-The term "good scientific practice"
+The term "good scientific practice" encompass
+
+\citep{Forschungsgemeinschaft-RulesGoodScientific-2013}
+
+\marginnote{The rules of the German Science Foundation (DFG) are available \href{http://www.dfg.de/en/research_funding/principles_dfg_funding/good_scientific_practice/}{here}. Other guidelines for good scientific practice are available \href{https://github.com/florianhartig/ResearchSkills/blob/master/Labs/AcademicSoftSkills/codesOfConduct.md}{here}}
+
+
+\subsection{Documentation}
+
+
+There is no clear legal rule about how long data, documentation and samples have to be stored, but most funding organizations require 
+
+
+
+\subsection{Honesty}
+
+
+
+
+\marginnote{Simple things like having a good folder structure for each project help a lot. Have a look at our lab on \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization}{project organization}}
+
+
+\marginnote{When working with code, specially collaboratively, there is no way around using a version control system. See our lap on version control \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl}{here}}
+
 
 \section{Social aspects}
 
-\subsection{Collaborations}
+\subsection{Collaborations and teams}
 
 \subsection{Conflicts}
 
-\subsection{Teams}
+\subsection{Intercultural issues}
 
 
 \section{Science as a career}
+
+
+
+\marginnote{Read the special feature in Nature on the \href{http://www.nature.com/news/specials/phdfuture/index.html}{future of the PhD}}
+
+
 
 \bibliographystyle{/Users/Florian/Home/Bibliography/Databases/bibstyles/elsart-harv-hyperlinks}
 \bibliography{/Users/Florian/Home/Bibliography/Databases/flo}
